src/objects/Task__c.object
<CustomObject>
    <description>Tasks related to a Project</description>
    <fields>
        <fullName>Add_to_All_Current_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, will add the task to all existing projects</description>
        <label>Add to All Current Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the task has been deactivated or not</description>
        <label>deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be included to all future projects when checked</description>
        <label>Common task (add to all future projects)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>task_id__c</fullName>
        <description>Harvest Task ID</description>
        <externalId>true</externalId>
        <label>Task ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>